diesel_compile_tests/tests/fail/insert_requires_value_of_same_type_as_column.stderr
error[E0277]: the trait bound `{integer}: diesel::Expression` is not satisfied
  --> tests/fail/insert_requires_value_of_same_type_as_column.rs:19:26
   |
19 |         .values(&name.eq(1));
   |                       -- ^ the trait `diesel::Expression` is not implemented for `{integer}`
   |                       |
   |                       required by a bound introduced by this call
   |
   = help: the following other types implement trait `diesel::Expression`:
             &'a T
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and 124 others
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Text>` for `{integer}`
